--- a/src/components/homeContent/index.scss
+++ b/src/components/homeContent/index.scss
@@ -1,6 +1,18 @@
 #CanteenOne {
     width: 100%;
-    height: 100%;
+    .topBox {
+        width: 100%;
+        height: 0;
+        padding: 0;
+        margin: 0;
+        border: 0;
+        background-color: #fff;
+    }
+    .list {
+        width: 100%;
+        opacity: 1;
+        overflow: scroll;
+    }
     ul {
         border-radius: 0.5rem;
         list-style: none;
@@ -11,8 +23,8 @@
             align-items: center;
             border-bottom: 0.1rem solid #eee;
             img {
-                width: 6rem;
-                height: 6rem;
+                width: 8rem;
+                height: 8rem;
                 border-radius: 0.3rem;
                 .img {
                     width: 100%;
@@ -20,5 +32,12 @@
                 }
             }
         }
+    }
+    .loadMore {
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50%);
+        opacity: 0.5;
     }
 }
